--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:onClick="showFriday"
     tools:context=".MainActivity">
 
     <TextView
@@ -25,6 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginLeft="40dp"
+        android:layout_marginBottom="40dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -36,6 +38,7 @@
             android:maxHeight="100dp"
             android:minWidth="150dp"
             android:minHeight="80dp"
+            android:onClick="showMonday"
             android:padding="5dp"
             android:paddingLeft="5dp"
             android:paddingTop="5dp"
@@ -51,6 +54,7 @@
             android:maxHeight="100dp"
             android:minWidth="150dp"
             android:minHeight="80dp"
+            android:onClick="showTuesday"
             android:padding="5dp"
             android:paddingLeft="5dp"
             android:paddingTop="5dp"
@@ -66,6 +70,7 @@
             android:maxHeight="100dp"
             android:minWidth="150dp"
             android:minHeight="80dp"
+            android:onClick="showWednesday"
             android:padding="5dp"
             android:paddingLeft="5dp"
             android:paddingTop="5dp"
@@ -81,6 +86,7 @@
             android:maxHeight="100dp"
             android:minWidth="150dp"
             android:minHeight="80dp"
+            android:onClick="showThursday"
             android:padding="5dp"
             android:paddingLeft="5dp"
             android:paddingTop="5dp"
@@ -96,6 +102,7 @@
             android:maxHeight="100dp"
             android:minWidth="150dp"
             android:minHeight="80dp"
+            android:onClick="showFriday"
             android:padding="5dp"
             android:paddingLeft="5dp"
             android:paddingTop="5dp"
@@ -111,6 +118,7 @@
             android:maxHeight="100dp"
             android:minWidth="150dp"
             android:minHeight="80dp"
+            android:onClick="showSaturday"
             android:padding="5dp"
             android:paddingLeft="5dp"
             android:paddingTop="5dp"
