--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,17 +24,18 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginLeft="40dp"
         android:layout_marginBottom="40dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView">
 
         <Button
             android:id="@+id/button6"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
             android:maxHeight="100dp"
             android:minWidth="150dp"
             android:minHeight="80dp"
@@ -45,12 +46,14 @@
             android:paddingRight="5dp"
             android:paddingBottom="5dp"
             android:text="@string/buttonMonday"
+            android:textSize="24sp"
             android:textStyle="bold" />
 
         <Button
             android:id="@+id/button5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
             android:maxHeight="100dp"
             android:minWidth="150dp"
             android:minHeight="80dp"
@@ -61,12 +64,14 @@
             android:paddingRight="5dp"
             android:paddingBottom="5dp"
             android:text="@string/buttonTuesday"
+            android:textSize="24sp"
             android:textStyle="bold" />
 
         <Button
             android:id="@+id/button3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
             android:maxHeight="100dp"
             android:minWidth="150dp"
             android:minHeight="80dp"
@@ -77,12 +82,14 @@
             android:paddingRight="5dp"
             android:paddingBottom="5dp"
             android:text="@string/buttonWednesday"
+            android:textSize="24sp"
             android:textStyle="bold" />
 
         <Button
             android:id="@+id/button2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
             android:maxHeight="100dp"
             android:minWidth="150dp"
             android:minHeight="80dp"
@@ -93,12 +100,14 @@
             android:paddingRight="5dp"
             android:paddingBottom="5dp"
             android:text="@string/buttonThursday"
+            android:textSize="24sp"
             android:textStyle="bold" />
 
         <Button
             android:id="@+id/button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
             android:maxHeight="100dp"
             android:minWidth="150dp"
             android:minHeight="80dp"
@@ -109,12 +118,14 @@
             android:paddingRight="5dp"
             android:paddingBottom="5dp"
             android:text="@string/buttonFriday"
+            android:textSize="24sp"
             android:textStyle="bold" />
 
         <Button
             android:id="@+id/button4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
             android:maxHeight="100dp"
             android:minWidth="150dp"
             android:minHeight="80dp"
@@ -125,6 +136,7 @@
             android:paddingRight="5dp"
             android:paddingBottom="5dp"
             android:text="@string/buttonSaturday"
+            android:textSize="24sp"
             android:textStyle="bold" />
     </LinearLayout>
 
